--- a/miaudocao_api/package.json
+++ b/miaudocao_api/package.json
@@ -4,6 +4,7 @@
   "description": "API do app MiAuDocao",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
