Removido body-parser e adicionado validador base64 #6

--- a/miaudocao_api/package.json
+++ b/miaudocao_api/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "is-base64": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.23"
