--- a/miaudocao_app/pubspec.yaml
+++ b/miaudocao_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   file_picker: ^3.0.1
   dio: ^4.0.0
+  loader_overlay: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
