--- a/miaudocao_app/pubspec.yaml
+++ b/miaudocao_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   file_picker: ^3.0.1
   dio: ^4.0.0
   loader_overlay: ^2.0.1
+  modal_bottom_sheet: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
