Biblioteca cors adicionada #12

--- a/miaudocao_api/package.json
+++ b/miaudocao_api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "is-base64": "^1.1.0",
