--- a/miaudocao_app/pubspec.yaml
+++ b/miaudocao_app/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   dio: ^4.0.0
   loader_overlay: ^2.0.1
   modal_bottom_sheet: ^2.0.0
+  measurer: 2.1.1
+  intl: ^0.17.0
+  expandable_text: ^2.1.0
+  google_maps_flutter: ^2.0.5
+  google_maps_flutter_web: ^0.3.0
+  url_launcher: ^6.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
