--- a/miaudocao_app/android/app/src/main/AndroidManifest.xml
+++ b/miaudocao_app/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="your_api_key_of_google_maps"
+          />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
