--- a/miaudocao_app/android/app/src/main/AndroidManifest.xml
+++ b/miaudocao_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.miaudocao_app">
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
    <application
         android:label="miaudocao_app"
         android:icon="@mipmap/ic_launcher">
