--- a/miaudocao_app/pubspec.yaml
+++ b/miaudocao_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_maps_flutter: ^2.0.5
   google_maps_flutter_web: ^0.3.0
   url_launcher: ^6.0.4
+  location: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
