--- a/.github/workflows/node_dev_pull_request.yml
+++ b/.github/workflows/node_dev_pull_request.yml
@@ -27,3 +27,10 @@ jobs:
           npm install
           npm run build --if-present
           npm test
+        env:
+          CI: true
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_USER: ${{ secrets.DB_USER }}
