--- a/.github/workflows/node_dev_pull_request.yml
+++ b/.github/workflows/node_dev_pull_request.yml
@@ -15,7 +15,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [12.x]
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
