--- a/miaudocao_api/package.json
+++ b/miaudocao_api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/server.js",
     "start": "node ./src/server.js",
-    "test": "jest test"
+    "test": "jest test --forceExit"
   },
   "keywords": [],
   "author": "",
